ChangeLog for the Astro project.

20210811:
	* fix some typos in tools

20210810:
	* get everything back in working order
	* fix bug that we could not access the calibration database

20210630:
	* improve configure.ac detection of required libraries

20210621:
	* implement binned coordinates
	* add TopLeftRectangle class to simplify coordinate computations
	  in QHY2 driver
	* fix subrectangle condition in ImageRectangle
	* add some more exception reporting

20210620:
	* fix a bug in the qhy2 driver caused by incorrect documentation
	  of the GetQHYCCDExposureRemaining method
	* remove OSXInitQHYCCDFirmwareArray as it is no longer needed

20210611:
	* fix effective area
	* fix Bayer mosaic code for qhy2
	* mirror image vertically (different coordinate systems)
	* add offset computation for effective area
	* add OSXInitQHYCCDFirmwareArray for OSX
	* fix Qhy2Cooler class
	* add toString method to CoolerInfo

20210610:
	* increase maximum message size to accomodate large chip cameras
	* fix a bug in astroinstrument
	* new naming scheme for QHY2 CCDs
	* add a QHY2 ccd for each readout mode
	* retrieve gain from QHY2 camera

20210607:
	* get qhyccd driver to work (InitQHYCCD), still open are window
	  heating

20210109:
	* fixes for moving to homebrew-provided libraries
	* switch to ost.ch address

20201227:
	* improve logging in AstroPersistence.h
	* exclude non-fits files from ImageDirectory
	* move configuration database into a subdirectory so that we can
	  give the subdirectory to the owner
	* move the snowstar.service script to the right place
	* fix a debug message in Outline.cpp that caused a crash
	* add blacklist mechanism to modules

20201226:
	* many portability fixes to get rid of compiler warnings
	* fix the liusb_set_debug deprecation, we now require that libusb be
	  at least 1.0.2x, wherever libusb_set_option appeared
	* fix size for unsigned long and double pixel maximum
	* added ssh key for development gurin